--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                                     </span>
                                 </p>
                                 <p>
-                                    Simplesmente a melhor pizza que já comi! Ingredientes frescos, massa perfeita e um atendimento impecável. Recomendo a todos!
+                                    A pizzaria oferece um ótimo serviço! A pizza é deliciosa, com massa leve e recheios generosos. O ambiente é agradável. Recomendo para quem busca qualidade e sabor!
                                 </p>
                             </div>
                         </div>
